# Feather

./: .codexignore  .gitignore  CMakeLists.txt  Makefile  README.md  readme.md
.cache/clangd/index/: FSScheduler.cpp.6F37FA1D4AC8CD5A.idx  FSScheduler.hpp.85EF42132FF07F47.idx
Docs/EN/: 01-core-feather.md  02-scheduler-fsscheduler.md  03-time-fstime.md  04-allocator-fsallocator.md  05-resource-tracker-fsresourcetracker.md  06-build-test-packaging.md  07-export-featherexport.md  README.md
Docs/KR/: 01-core-feather.md  02-scheduler-fsscheduler.md  03-time-fstime.md  04-allocator-fsallocator.md  05-resource-tracker-fsresourcetracker.md  06-build-test-packaging.md  README.md
FeatherSystem/: Feather.cpp  Feather.hpp
FeatherSystem/Core/: Clock.hpp
FeatherSystem/Events/: Event.hpp
FeatherSystem/Feather/: Feather.cpp  Feather.hpp
FeatherSystem/FeatherRuntime/: FSEvent.hpp  FSEvents.cpp  FSEvents.hpp  FSScheduler.cpp  FSScheduler.hpp  FSTime.cpp  FSTime.hpp
FeatherSystem/FeatherUI/: FSDisplay.hpp
FeatherSystem/Platform/: Platform.hpp
FeatherSystem/Scheduler/: Scheduler.hpp
FeatherSystem/UI/: Display.hpp
System/: Feather.c  Feather.cpp  Feather.h  Feather.hpp  FeatherC.hpp  FeatherCpp.cpp  FeatherCpp.hpp  FeatherExport.hpp
System/FeatherRuntime/: FSAllocator.cpp  FSAllocator.h  FSAllocator.hpp  FSResourceTracker.c  FSResourceTracker.cpp  FSResourceTracker.h  FSResourceTracker.hpp  FSScheduler.c  FSScheduler.cpp  FSScheduler.h  FSScheduler.hpp  FSTime.c  FSTime.cpp  FSTime.h  FSTime.hpp  FSTime_arduino.c  FSTime_arduino.cpp  FSTime_posix.c  FSTime_posix.cpp  FSTime_windows.c  FSTime_windows.cpp
Test/: Makefile  a.out  test1  test1.cpp
Test/Diagnostics/: feather_demo.cpp  feather_fast_demo.cpp  feather_full_system_benchmark.cpp  feather_memory_test.c  feather_memory_test.cpp  feather_resource_tracking_test.cpp  feather_system_score_test.c  feather_system_score_test.cpp
Test/Examples/: feather_example.c  feather_example.cpp  simtest  simtest.cpp
Test/Smoke/: feather_cpp_scheduler_test.cpp  feather_test_cli.c  feather_test_cli.cpp
Test/test1.dSYM/Contents/Resources/DWARF/: test1
cmake/: Feather.pc.in  FeatherConfig.cmake.in
